--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,5 @@
-MONGO_URI=mongodb+srv://hermanlacostaedu_db_user:Thepearlofthesea124@imperal.w85gpqr.mongodb.net/?retryWrites=true&w=majority&appName=IMPERAL
+MONGO_URI=mongodb+srv://hermanlacostaedu_db_user:Thepearlofthesea124@imperal.w85gpqr.mongodb.net/impearlDB?retryWrites=true&w=majority&appName=IMPERAL
+JWT_SECRET=super_secret_token_key
 PORT=5000
+
+
