--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.2"
   }
 }
